--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "mongodb": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
